tests/snapshots/skill_generation_tests__generated_datasets_openai_yaml.snap
---
source: tests/skill_generation_tests.rs
expression: "&datasets_skill.openai_yaml"
---
interface:
  display_name: "bqx Datasets"
  short_description: "get/list BigQuery datasets via bqx"
  default_prompt: "Use $bqx-datasets to get/list BigQuery datasets using the bqx CLI."

policy:
  allow_implicit_invocation: true
