tests/snapshots/skill_generation_tests__generated_datasets_references_md.snap
---
source: tests/skill_generation_tests.rs
expression: "&datasets_skill.references_md"
---
# dcx-datasets command reference

> Generated from the command contract. Do not edit by hand.

## datasets get

Returns the dataset specified by datasetID.

```bash
dcx datasets get \
  --project-id <PROJECT_ID> \
  --dataset-id <DATASET_ID> \
  [--access-policy-version <ACCESS_POLICY_VERSION>] \
  [--dataset-view <DATASET_VIEW>] \
  [--dry-run] \
  [--format json|table|text]
```

| Flag | Required | Description |
|------|----------|-------------|
| `--project-id` | Yes | GCP project ID (global flag) |
| `--dataset-id` | Yes | BigQuery dataset (global flag) |
| `--access-policy-version` | No | Optional |
| `--dataset-view` | No | Optional |

## datasets list

Lists all datasets in the specified project to which the user has been granted the READER dataset role.

```bash
dcx datasets list \
  --project-id <PROJECT_ID> \
  [--all] \
  [--filter <FILTER>] \
  [--max-results <MAX_RESULTS>] \
  [--dry-run] \
  [--format json|table|text]
```

| Flag | Required | Description |
|------|----------|-------------|
| `--project-id` | Yes | GCP project ID (global flag) |
| `--all` | No | Whether to list all datasets, including hidden ones |
| `--filter` | No | An expression for filtering the results of the request by label |
| `--max-results` | No | The maximum number of results to return in a single response page |

## Examples

```bash
# Get datasets
dcx datasets get \
  --project-id my-proj \
  --dataset-id my_dataset \
  --format table

# List datasets
dcx datasets list \
  --project-id my-proj \
  --format table

```
