tests/snapshots/skill_generation_tests__generated_models_openai_yaml.snap
---
source: tests/skill_generation_tests.rs
expression: "&models_skill.openai_yaml"
---
interface:
  display_name: "dcx Models"
  short_description: "get/list BigQuery models via dcx"
  default_prompt: "Use $dcx-models to get/list BigQuery models using the dcx CLI."

policy:
  allow_implicit_invocation: true
