tests/snapshots/skill_generation_tests__generated_routines_openai_yaml.snap
---
source: tests/skill_generation_tests.rs
expression: "&routines_skill.openai_yaml"
---
interface:
  display_name: "dcx Routines"
  short_description: "get/list BigQuery routines via dcx"
  default_prompt: "Use $dcx-routines to get/list BigQuery routines using the dcx CLI."

policy:
  allow_implicit_invocation: true
