tests/snapshots/skill_generation_tests__generated_routines_skill_md.snap
---
source: tests/skill_generation_tests.rs
expression: "&routines_skill.skill_md"
---
---
name: dcx-routines
description: Use dcx to manage BigQuery routines via the get, list commands.
---

## When to use this skill

Use when the user wants to:
- get a BigQuery routine
- list a BigQuery routine
- show or inspect BigQuery routines

Do not use for analytics workflows (doctor, evaluate, get-trace) — use dcx-analytics instead.

## Prerequisites

Authentication: `dcx auth login` or set `DCX_PROJECT` / `DCX_TOKEN`.

Requires: `--project-id` and `--dataset-id`

## Commands

| Command | Description |
|---------|-------------|
| `dcx routines get` | Gets the specified routine resource by routine ID. |
| `dcx routines list` | Lists all routines in the specified dataset |

See [references/commands.md](references/commands.md) for flags, constraints, and examples.

## Decision rules

- Use `--dry-run` to preview the API request
- Use `--format table` for visual scanning, `--format json` for piping
- Use `--format json-minified` for agent pipelines (same schema, ~32% fewer tokens)
- Use `routines list` to discover available routines
- Use `routines get` to inspect a specific routine
