tests/snapshots/skill_generation_tests__generated_tables_openai_yaml.snap
---
source: tests/skill_generation_tests.rs
expression: "&tables_skill.openai_yaml"
---
interface:
  display_name: "dcx Tables"
  short_description: "get/list BigQuery tables via dcx"
  default_prompt: "Use $dcx-tables to get/list BigQuery tables using the dcx CLI."

policy:
  allow_implicit_invocation: true
