tests/snapshots/skill_generation_tests__generated_tables_references_md.snap
---
source: tests/skill_generation_tests.rs
expression: "&tables_skill.references_md"
---
# dcx-tables command reference

> Generated from the command contract. Do not edit by hand.

## tables get

Gets the specified table resource by table ID. This method does not return the data in the table, it only returns the table resource, which describes the structure of this table.

```bash
dcx tables get \
  --project-id <PROJECT_ID> \
  --dataset-id <DATASET_ID> \
  --table-id <TABLE_ID> \
  [--selected-fields <SELECTED_FIELDS>] \
  [--view <VIEW>] \
  [--dry-run] \
  [--format json|table|text]
```

| Flag | Required | Description |
|------|----------|-------------|
| `--project-id` | Yes | GCP project ID (global flag) |
| `--dataset-id` | Yes | BigQuery dataset (global flag) |
| `--table-id` | Yes | Required |
| `--selected-fields` | No | List of table schema fields to return (comma-separated) |
| `--view` | No | Optional |

## tables list

Lists all tables in the specified dataset. Requires the READER dataset role.

```bash
dcx tables list \
  --project-id <PROJECT_ID> \
  --dataset-id <DATASET_ID> \
  [--max-results <MAX_RESULTS>] \
  [--dry-run] \
  [--format json|table|text]
```

| Flag | Required | Description |
|------|----------|-------------|
| `--project-id` | Yes | GCP project ID (global flag) |
| `--dataset-id` | Yes | BigQuery dataset (global flag) |
| `--max-results` | No | The maximum number of results to return in a single response page |

## Examples

```bash
# Get tables
dcx tables get \
  --project-id my-proj \
  --dataset-id my_dataset \
  --table-id my_table_id \
  --format table

# List tables
dcx tables list \
  --project-id my-proj \
  --dataset-id my_dataset \
  --format table

```
