tests/snapshots/skill_generation_tests__generated_tables_skill_md.snap
---
source: tests/skill_generation_tests.rs
expression: "&tables_skill.skill_md"
---
---
name: dcx-tables
description: Use dcx to manage BigQuery tables via the get, list commands.
---

## When to use this skill

Use when the user wants to:
- get a BigQuery table
- list a BigQuery table
- show or inspect BigQuery tables

Do not use for analytics workflows (doctor, evaluate, get-trace) — use dcx-analytics instead.

## Prerequisites

Authentication: `dcx auth login` or set `DCX_PROJECT` / `DCX_TOKEN`.

Requires: `--project-id` and `--dataset-id`

## Commands

| Command | Description |
|---------|-------------|
| `dcx tables get` | Gets the specified table resource by table ID |
| `dcx tables list` | Lists all tables in the specified dataset |

See [references/commands.md](references/commands.md) for flags, constraints, and examples.

## Decision rules

- Use `--dry-run` to preview the API request
- Use `--format table` for visual scanning, `--format json` for piping
- Use `--format json-minified` for agent pipelines (same schema, ~28% fewer tokens)
- Use `tables list` to discover available tables
- Use `tables get` to inspect a specific table
